adding React Router, Most of UI, Redux Thunk Cycle

--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "group-app-server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "nodemon run server.js"
@@ -14,5 +13,7 @@
     "express": "^4.17.1",
     "nodemon": "^1.19.2",
     "socket.io": "^2.2.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
